test/expected/using_ai.out
using SI = auto int
           ^
12: error: "auto" illegal in type definition
